--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
+    "start": "node index.js",
     "get_songs": "node getSongs.js",
     "get_song": "node getSongLyrics.js",
     "parse_song": "node parseSongData.js"
@@ -17,6 +18,7 @@
     "puppeteer": "^1.14.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "request-promise-native": "^1.0.7",
     "slug": "^1.1.0"
   },
   "devDependencies": {
