--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "ent": "^2.2.0",
+    "fs-extra": "^7.0.1",
     "minimist": "^1.2.0",
     "puppeteer": "^1.14.0",
     "request": "^2.88.0",
